--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "js-yaml": "^3.13.1"
   }
 }
