--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "js-yaml": "^3.13.1"
   }
 }
